rouge code highlighter installed and rouge_theme_native.css is a rouge theme called Native

--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,15 @@ github_username:  iamrf
 instagram_username: arefallah
 linkedin_username: aref-fallah
 
+#Others
+markdown: kramdown
+
+# Syntax highlighting
+highlighter: rouge
+kramdown:
+    input: GFM 
+    syntax_highlighter: rouge
+
 # Build settings
 theme: minima
 plugins:
