all img tags object-fit= cover and default blog posts permalink changes to /blog/:title/

--- a/_config.yml
+++ b/_config.yml
@@ -69,8 +69,8 @@ plugins:
 
 #   Permalinks allow us to structure the directories of our source code different 
 #   from the directories in our output.
-permalink: /:categories/:year/:month/:day/:title/   # or use >> permalink: pretty
-
+#   permalink: /:categories/:year/:month/:day/:title/   # or use >> permalink: pretty
+permalink: /blog/:title/
 
 #   Collections are a great way to group related content like members of a team or 
 #   talks at a conference.
