--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: عارف فلاح
+blog_author: عارف
 email: aref.fallah@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
         نوشته های من
