--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ email: aref.fallah@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
         توسعه دهنده پایتون / جنگو - طراح وب
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://iamrf.net" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://iamrf.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 project_url: "https://github.com/iamrf/iamrf.github.io"
 
 twitter_username: areffallah
