--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: عارف فلاح
-blog_author: عارف
+blog_author: عارف فلاح
 email: aref.fallah@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
         توسعه دهنده پایتون / جنگو - طراح وب
@@ -76,7 +76,7 @@ paginate_path: "/blog/page:num/"
 #   Permalinks allow us to structure the directories of our source code different 
 #   from the directories in our output.
 #   permalink: /:categories/:year/:month/:day/:title/   # or use >> permalink: pretty
-permalink: /blog/:title/
+permalink: /:collection/:title/
 
 #   Collections are a great way to group related content like members of a team or 
 #   talks at a conference.
@@ -87,7 +87,7 @@ collections:
   portfolio:
     output: true
     permalink: /:collection/:title/
-  travels:
+  courses:
     output: true
     permalink: /:collection/:title/
 
